fix banner contrast

--- a/common/common.scss
+++ b/common/common.scss
@@ -487,7 +487,7 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
     .custom-search-banner-wrap h1, .custom-search-banner-wrap p {
         text-transform: uppercase;
         font-weight: bold;
-        color: #2e7d32;
+        color: #37474f;
     }
 }
 
